--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,12 @@ jobs:
     name: Deploy
     steps:
       - uses: actions/checkout@v2
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.5.1
+        with:
+          node-version: "14.x"
+      - name: Install dependencies
+        run: npm install
       - name: Publish
         uses: cloudflare/wrangler-action@2.0.0
         with:
