--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "timetable-app-api"
 compatibility_date = "2023-01-01"
 main = "src/index.ts"
+node_compat = true
 
 [[d1_databases]]
 binding = "DB"
